@@ -1,3 +1,10 @@
+2003-09-25  Ross Burton  <ross@burtonini.com>
+
+	* src/bacon-cd-selection.[ch]:
+	* src/cd-drive.c:
+	* src/dvd_plus_rw_utils.cpp:
+	Updated libbacon sources.
+
 2003-09-24  Bastien Nocera  <hadess@hadess.net>
 
 	* src/sj-extractor.c: (sj_extractor_supports_encoding):
